estilo inicial desenvolvido

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <title>Projeto API</title>
 </head>
 <body>
-    <h1>Cadastro</h1>
     <div class="box">
-        <form action="cadastro" class="cadastro">
+        <h1>Cadastro</h1>
+        <form action="" class="cadastro">
             <input type="text" name="nome" placeholder="Nome">
             <input type="text" name="email" placeholder="Email">
             <input type="password" name="senha" placeholder="Senha">
